# DPconv

./: .gitignore  LICENSE  README.md
queries/ceb-imdb-full/: 10a_0052dae88e318a044c8c1239c04a7f85e9b1402a.csv  10a_006b134b0fc53142965ad1c8d6da2f767e470fc6.csv  10a_0075ed47d39ae9b98d4c301e6c368bb184535a0a.csv  10a_00baa73e4c0d6d43704047c9da1bb584d7174e1e.csv  10a_00e9ce53d0b204dca29fc66397b95ee3ed779b2f.csv  10a_00f5d43010090779cb87246aae0d2b4320f3c749.csv  10a_00fc6a48f3e03f0a331a6290bb97baf29c33d3bc.csv  10a_0129c48fb89dc295b18cd4cc4e6b01d9f5146b5e.csv  10a_018267ca9895129780f16356ca18bb417a594217.csv  10a_01836a26dc16abed7546d6c50bcc8dc6b17e974c.csv  10a_01d004f5fbd353588af346407113013cd5333d7c.csv  10a_01f549add8a45713ef4033e223fe000d855a54c8.csv  10a_026f285e7cb66ed065845ad498f4605f753b893d.csv  10a_032aa76530b379b515e92853a8a11d487dfdc447.csv  10a_032c334b21cf5429ebf2d55ba78056d4011731ee.csv  10a_03793357f803a7fad1e710f7931bec372481d24f.csv  10a_03ea982af53ed31516df22ccd7cbb28c23ba7ab2.csv  10a_0410f43135d802895f1e4bd2730cde3bcbcf28c7.csv  10a_042c212814faf3d7738a3ee3ea95bdeab7985a05.csv  10a_044b86b1f6a4fa2aba67e595057c65147ff7912b.csv  10a_045e0272a5271e0cbb8bb9f61161b5657cd53c0b.csv  (+13608 more)
queries/job/: job_10a.csv  (+112 more)
src/: CMakeLists.txt  bench.cc  clique_bench.cc  cout_cmax_ratios.csv
src/algorithms/: DPccp.cpp  DPconv.cpp  DPsub.cpp
src/include/: BitSet.hpp  Common.hpp  QueryGraph.hpp  SubsetConvolution.hpp
src/types/: ContArray.hpp  DynamicMinMaxRingElement.hpp  StaticMinMaxRingElement.hpp  TypeUtil.hpp
src/util/: BenchmarkRunner.hpp  Generator.hpp  Util.hpp
